--- a/homework/Day_023_HW.ipynb
+++ b/homework/Day_023_HW.ipynb
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -329,8 +329,8 @@
      "output_type": "stream",
      "text": [
       "shape : (891, 5)\n",
-      "score : 0.7788748937419742\n",
-      "time : 0.049002647399902344 sec\n"
+      "score : 0.33494273995838547\n",
+      "time : 0.03500223159790039 sec\n"
      ]
     }
    ],
@@ -340,7 +340,7 @@
     "for c in df.columns:\n",
     "    df_temp[c] = LabelEncoder().fit_transform(df[c])\n",
     "train_X = df_temp[:train_num]\n",
-    "estimator = LogisticRegression()\n",
+    "estimator = LinearRegression()\n",
     "start = time.time()\n",
     "print(f'shape : {train_X.shape}')\n",
     "print(f'score : {cross_val_score(estimator, train_X, train_Y, cv=5).mean()}')\n",
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -357,8 +357,8 @@
      "output_type": "stream",
      "text": [
       "shape : (891, 5)\n",
-      "score : 0.8350366889413987\n",
-      "time : 0.031002044677734375 sec\n"
+      "score : 0.4378028159706645\n",
+      "time : 0.018001079559326172 sec\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
     "    data = pd.merge(data, mean_df, on=c, how='left')\n",
     "    data = data.drop([c] , axis=1)\n",
     "data = data.drop(['Name_mean', 'Ticket_mean', 'Survived'] , axis=1)\n",
-    "estimator = LogisticRegression()\n",
+    "estimator = LinearRegression()\n",
     "start = time.time()\n",
     "print(f'shape : {train_X.shape}')\n",
     "print(f'score : {cross_val_score(estimator, data, train_Y, cv=5).mean()}')\n",
@@ -399,25 +399,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape : (891, 5)\n",
+      "score : 0.7788748937419742\n",
+      "time : 0.05300283432006836 sec\n"
+     ]
+    }
+   ],
    "source": [
-    "# 對照組 : 標籤編碼 + 邏輯斯迴歸"
+    "# 對照組 : 標籤編碼 + 邏輯斯迴歸\n",
+    "df_temp = pd.DataFrame()\n",
+    "for c in df.columns:\n",
+    "    df_temp[c] = LabelEncoder().fit_transform(df[c])\n",
+    "train_X = df_temp[:train_num]\n",
+    "estimator = LogisticRegression()\n",
+    "start = time.time()\n",
+    "print(f'shape : {train_X.shape}')\n",
+    "print(f'score : {cross_val_score(estimator, train_X, train_Y, cv=5).mean()}')\n",
+    "print(f'time : {time.time() - start} sec')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape : (891, 5)\n",
+      "score : 0.8350366889413987\n",
+      "time : 0.049002885818481445 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 均值編碼 + 邏輯斯迴歸\n",
+    "data = pd.concat([df[:train_num], train_Y], axis=1)\n",
+    "for c in df.columns:\n",
+    "    mean_df = data.groupby([c])['Survived'].mean().reset_index()\n",
+    "    mean_df.columns = [c, f'{c}_mean']\n",
+    "    data = pd.merge(data, mean_df, on=c, how='left')\n",
+    "    data = data.drop([c] , axis=1)\n",
+    "data = data.drop(['Name_mean', 'Ticket_mean', 'Survived'] , axis=1)\n",
+    "estimator = LogisticRegression()\n",
+    "start = time.time()\n",
+    "print(f'shape : {train_X.shape}')\n",
+    "print(f'score : {cross_val_score(estimator, data, train_Y, cv=5).mean()}')\n",
+    "print(f'time : {time.time() - start} sec')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "# 均值編碼 + 邏輯斯迴歸"
-   ]
+   "source": []
   }
  ],
  "metadata": {
